Fixed resume horizontal cut off

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -161,8 +161,6 @@ h2 {
 
 .resume {
   height: 100vh;
-  width: 100wh;
-  min-width: 720px;
   max-width: 1080px;
   max-height: 1920px;
   overflow-x: scroll;
